Fix loading issues and path conflicts

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,10 +61,25 @@ jobs:
           # Copy the index.html and 404.html to the root directory
           cp public/index.html out/
           cp public/404.html out/
-      - name: Fix static asset paths
+      - name: Fix static asset paths - improved
         run: |
+          # More comprehensive path fixes
           find out -type f -name "*.html" -exec sed -i 's|href="/_next/|href="/devio/_next/|g' {} \;
           find out -type f -name "*.html" -exec sed -i 's|src="/_next/|src="/devio/_next/|g' {} \;
+          
+          # Handle additional path issues in JS files
+          find out/_next/static -type f -name "*.js" -exec sed -i 's|"/_next/static/|"/devio/_next/static/|g' {} \;
+          
+          # Fix references to images and other assets
+          find out -type f -name "*.js" -exec sed -i 's|src:"/|src:"/devio/|g' {} \;
+          find out -type f -name "*.js" -exec sed -i 's|src="/|src="/devio/|g' {} \;
+          find out -type f -name "*.js" -exec sed -i 's|href="/|href="/devio/|g' {} \;
+          
+          # Make sure all JSON data with paths are correctly updated
+          find out -type f -name "*.js" -exec sed -i 's|"url":"/|"url":"/devio/|g' {} \;
+          
+          echo "Fixed paths in HTML and JS files"
+          
       - name: Extract CSS filename and ensure it's loaded
         run: |
           # Find the generated CSS filename
@@ -77,6 +92,30 @@ jobs:
           else
             echo "Warning: No CSS file found in out/_next/static/css"
           fi
+          
+      - name: Copy static assets to devio directory for backward compatibility
+        run: |
+          # Create devio directory to ensure old paths still work
+          mkdir -p out/devio
+          
+          # Create a minimal index.html in the devio folder that redirects to main app
+          cat << EOF > out/devio/index.html
+          <!DOCTYPE html>
+          <html>
+          <head>
+            <meta charset="utf-8">
+            <title>Redirecting...</title>
+            <meta http-equiv="refresh" content="0;url=/">
+            <script>window.location.href = '/';</script>
+          </head>
+          <body>
+            <p>Redirecting to main app...</p>
+          </body>
+          </html>
+          EOF
+          
+          echo "Created compatibility redirects"
+          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
