--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # Production environment variables
-NEXT_PUBLIC_BASE_PATH=/devio
+NEXT_PUBLIC_BASE_PATH=
 NEXT_PUBLIC_SITE_URL=https://onedevio.me
 NODE_ENV=production 
